--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
         "fs": "0.0.1-security",
         "rm": "^0.1.8"
     },
-    "author": "Your Name",
+    "author": "Wasetrox",
     "license": "MIT"
 }
